# gazelle_proto_import

./: BUILD  README.md  WORKSPACE
hello_proto/: BUILD.bazel  hello.proto
server_proto/: BUILD.bazel  server.proto
