load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hello_go_proto",
    importpath = "github.com/rutsky/gazelle_proto_import/hello_proto",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":hello_go_proto"],
    importpath = "github.com/rutsky/gazelle_proto_import/hello_proto",
    visibility = ["//visibility:public"],
)
