load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "server_proto",
    srcs = ["server.proto"],
    visibility = ["//visibility:public"],
    deps = ["//github.com/rutsky/gazelle_proto_import/hello_proto:hello_proto_proto"],
)

go_proto_library(
    name = "server_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rutsky/gazelle_proto_import/server_proto",
    proto = ":server_proto",
    visibility = ["//visibility:public"],
    deps = ["//github.com/rutsky/gazelle_proto_import/hello_proto:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":server_go_proto"],
    importpath = "github.com/rutsky/gazelle_proto_import/server_proto",
    visibility = ["//visibility:public"],
)
